--- a/index.html
+++ b/index.html
@@ -498,8 +498,8 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
             <div class="pricing-tem">
-              <h3 style="color: #20c997;">Starter Plan (For Small Businesses & Startups)</h3>
-              <div class="price"><sup>₹</sup>4,999 - 9,999<span> / mo</span></div>
+              <h3 style="color: #20c997;">Starter Plan</h3>
+              <div class="price"><small style="font-size: 17px;"><em>Starting from</em></small> <sup>₹</sup>4,999<span> / mo</span></div>
               <div class="icon">
                 <i class="bi bi-box" style="color: #20c997;"></i>
               </div>
@@ -520,13 +520,13 @@
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="pricing-tem">
               <span class="featured">Featured</span>
-              <h3 style="color: #0dcaf0;">Growth Plan (For Scaling Businesses & Online Stores)</h3>
-              <div class="price"><sup>₹</sup>14,999 - 24,999<span> / mo</span></div>
+              <h3 style="color: #0dcaf0;">Growth Plan </h3>
+              <div class="price"><small style="font-size: 17px;"><em>Starting from</em></small> <sup>₹</sup>14,999<span> / mo</span></div>
               <div class="icon">
                 <i class="bi bi-send" style="color: #0dcaf0;"></i>
               </div>
               <ul>
-                <li>E-commerce Website (Shopify/WooCommerce)</li>
+                <li>E-commerce Website</li>
                 <li>Payment Gateway Integration</li>
                 <li>SEO Optimization & Analytics</li>
                 <li>Basic Digital Marketing Setup</li>
@@ -540,14 +540,14 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="pricing-tem">
-              <h3 style="color: #fd7e14;">Enterprise Plan (For Large Businesses & Corporations)</h3>
-              <div class="price"><sup>₹</sup>29,999 - 49,999<span> / mo</span></div>
+              <h3 style="color: #fd7e14;">Enterprise Plan </h3>
+              <div class="price"><small style="font-size: 17px;"><em>Starting from</em></small> <sup>₹</sup>29,999<span> / mo</span></div>
               <div class="icon">
                 <i class="bi bi-airplane" style="color: #fd7e14;"></i>
               </div>
               <ul>
-                <li>Fully Custom Website (WordPress/Custom Code)</li>
-                <li>Custom App Development (Android & iOS)</li>
+                <li>Fully Custom Website</li>
+                <li>App Development (Android & iOS)</li>
                 <li>SEO + Paid Ad Management (Google, Meta)</li>
                 <li>Website & App Testing + Optimization</li>
                 <li>Dedicated Project Manager</li>
@@ -558,7 +558,7 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="pricing-tem">
-              <h3 style="color: #0d6efd;">Custom Plan (For Unique Business Needs)</h3>
+              <h3 style="color: #0d6efd;">Custom Plan</h3>
               <div class="price"><sup></sup>Contact Us for a Custom Quote<span> </span></div>
               <div class="icon">
                 <i class="bi bi-rocket" style="color: #0d6efd;"></i>
