--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <h3>Who We Are</h3>
               <h2>Your Trusted IT Partner for Growth</h2>
               <p>
-                With years of experience in web, app development, and digital marketing, we craft IT solutions that fuel business success.
+                At BizzNist, we are passionate about driving digital transformation and empowering businesses to achieve their full potential. Our team of seasoned professionals brings together a wealth of experience in IT services, dedicated to delivering innovative solutions that align with your unique goals. We believe in building lasting partnerships, fostering trust, and consistently exceeding expectations. With a client-centric approach, we are committed to navigating the complexities of the digital landscape, ensuring your success in an ever-evolving market.
               </p>
               <div class="text-center text-lg-start">
                 <a href="#services" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
