--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="card">
               <img src="assets/img/values-1.png" class="img-fluid" alt="">
               <h3>Customized Solutions</h3>
-              <p>Tailored IT strategies for every business.</p>
+              <p>We craft tailored IT solutions to match your business needs, ensuring efficiency, growth, and success.</p>
             </div>
           </div><!-- End Card Item -->
 
