--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
           <li><a href="/" class="active">Home<br></a></li>
           <li><a href="#about">About</a></li>
           <!--<li><a href="#team">Team</a></li> -->
-          <li><a href="https://gyaansaar.bizznist.com/knowledge-base">Knowledge Base</a></li>
           <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li class="dropdown"><a href="/services/website-development"><span>Website Development</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -71,6 +70,7 @@
               <li><a href="/services/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
             </ul>
           </li>
+          <li><a href="https://gyaansaar.bizznist.com/knowledge-base">Resource Center</a></li>
           <li><a href="#pricing">Pricing</a></li>
           </li>
         </ul>
@@ -859,7 +859,7 @@
       <!-- Section Title -->
       <div class="container section-title aos-init aos-animate" data-aos="fade-up">
         <h2>Recent Posts</h2>
-        <p>Stay Ahead with Industry Insights</p>
+        <p>Resource Center</p>
       </div><!-- End Section Title -->
 
       <div class="container">
