--- a/about.html
+++ b/about.html
@@ -123,82 +123,101 @@
 
   </main>
 
-  <div class="container footer-top">
-    <div class="row gy-4">
-      <div class="col-lg-4 col-md-6 footer-about">
-        <a href="/" class="d-flex align-items-center">
-          <span class="sitename">BizzNist</span>
-        </a>
-        <div class="footer-contact pt-3">
-          <p>Ghaziabad</p>
-          <p>Uttar Pradesh, India, 201002</p>
-          <p class="mt-3"><strong>Phone:</strong> <span>+91 9210481163</span></p>
-          <p><strong>Email:</strong> <span>contact@bizznist.com</span></p>
+  <footer id="footer" class="footer">
+
+<!--    <div class="footer-newsletter">
+      <div class="container">
+        <div class="row justify-content-center text-center">
+          <div class="col-lg-6">
+            <h4>Join Our Newsletter</h4>
+            <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
+            <form action="forms/newsletter.php" method="post" class="php-email-form">
+              <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
+              <div class="loading">Loading</div>
+              <div class="error-message"></div>
+              <div class="sent-message">Your subscription request has been sent. Thank you!</div>
+            </form>
+          </div>
         </div>
       </div>
+    </div> -->
 
-      <div class="col-lg-2 col-md-3 footer-links">
-        <h4>Useful Links</h4>
-        <ul>
-          <li><i class="bi bi-chevron-right"></i> <a href="/">Home</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/about-us">About us</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/services">Services</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/terms-of-service">Terms of service</a></li>
-        </ul>
-      </div>
-
-      <div class="col-lg-2 col-md-3 footer-links">
-        <h4>Our Services</h4>
-        <ul>
-          <li><i class="bi bi-chevron-right"></i> <a href="/website-development">Website Development</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/seo-and-digital-marketing">SEO & Digital Marketing</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/corporate-training-and-technical-documentation">Corporate Training & Technical Documentation</a></li>
-          <li><i class="bi bi-chevron-right"></i> <a href="/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
-        </ul>
-      </div>
-
-      <div class="col-lg-4 col-md-12">
-        <h4>Follow Us</h4>
-        <p>Stay Connected. Stay Ahead. Follow Us for the Latest Updates</p>
-        <div class="social-links d-flex">
-          <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
-          <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
-          <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
-          <a href="https://www.linkedin.com/company/bizznist/"><i class="bi bi-linkedin"></i></a>
+    <div class="container footer-top">
+      <div class="row gy-4">
+        <div class="col-lg-4 col-md-6 footer-about">
+          <a href="/" class="d-flex align-items-center">
+            <span class="sitename">BizzNist</span>
+          </a>
+          <div class="footer-contact pt-3">
+            <p>Ghaziabad</p>
+            <p>Uttar Pradesh, India, 201002</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+91 9210481163</span></p>
+            <p><strong>Email:</strong> <span>contact@bizznist.com</span></p>
+          </div>
         </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><i class="bi bi-chevron-right"></i> <a href="/">Home</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/about-us">About us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/services">Services</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/terms-of-service">Terms of service</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Our Services</h4>
+          <ul>
+            <li><i class="bi bi-chevron-right"></i> <a href="/website-development">Website Development</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/seo-and-digital-marketing">SEO & Digital Marketing</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/corporate-training-and-technical-documentation">Corporate Training & Technical Documentation</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-4 col-md-12">
+          <h4>Follow Us</h4>
+          <p>Stay Connected. Stay Ahead. Follow Us for the Latest Updates</p>
+          <div class="social-links d-flex">
+            <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
+            <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
+            <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
+            <a href="https://www.linkedin.com/company/bizznist/"><i class="bi bi-linkedin"></i></a>
+          </div>
+        </div>
+
       </div>
-
     </div>
-  </div>
 
-  <div class="container copyright text-center mt-4">
-    <p>©2025 <span>Copyright</span> <strong class="px-1 sitename">BizzNist</strong> <span>All Rights Reserved</span></p>
-    <div class="credits">
-      <!-- All the links in the footer should remain intact. -->
-      <!-- You can delete the links only if you've purchased the pro version. -->
-      <!-- Licensing information: https://bootstrapmade.com/license/ -->
-      <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-      Designed by <a href="/">BizzNist</a>
+    <div class="container copyright text-center mt-4">
+      <p>©2025 <span>Copyright</span> <strong class="px-1 sitename">BizzNist</strong> <span>All Rights Reserved</span></p>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you've purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+        Designed by <a href="/">BizzNist</a>
+      </div>
     </div>
-  </div>
 
-</footer>
+  </footer>
 
-<!-- Scroll Top -->
-<a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-<!-- Vendor JS Files -->
-<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="assets/vendor/php-email-form/validate.js"></script>
-<script src="assets/vendor/aos/aos.js"></script>
-<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-<script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-<script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-<!-- Main JS File -->
-<script src="assets/js/main.js"></script>
+  <!-- Main JS File -->
+  <script src="assets/js/main.js"></script>
 
 </body>
 
