--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="/" class="active">Home<br></a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="/about-us">About</a></li>
           <!--<li><a href="#team">Team</a></li> -->
           <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
@@ -70,7 +70,7 @@
               <li><a href="/services/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
             </ul>
           </li>
-          <li><a href="https://gyaansaar.bizznist.com/knowledge-base">Resource Center</a></li>
+          <li><a href="https://gyaansaar.bizznist.com/knowledge-base" target="_blank">Resource Center</a></li>
           <li><a href="#pricing">Pricing</a></li>
           </li>
         </ul>
@@ -1081,9 +1081,10 @@
           <h4>Useful Links</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="/">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="/about-us">About us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="/services">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="/terms-of-service">Terms of service</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/about-us" target="_blank">About us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/services" target="_blank">Services</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="https://gyaansaar.bizznist.com/knowledge-base" target="_blank">Resource Center</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/terms-of-service" target="_blank">Terms of service</a></li>
           </ul>
         </div>
 
