--- a/about.html
+++ b/about.html
@@ -160,9 +160,10 @@
           <h4>Useful Links</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="/">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="/about-us">About us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="/services">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="/terms-of-service">Terms of service</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/about-us" target="_blank">About us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/services" target="_blank">Services</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="https://gyaansaar.bizznist.com/knowledge-base" target="_blank">Resource Center</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/terms-of-service" target="_blank">Terms of service</a></li>
           </ul>
         </div>
 
