--- a/about.html
+++ b/about.html
@@ -143,11 +143,13 @@
 
       <div class="container" data-aos="fade-up">
         <p style="text-align: center;">
-          🔹 Client-Centric Approach – Your success defines our success. 
-          🔹 Innovation & Excellence – We stay ahead with cutting-edge solutions.
-          🔹 Transparency & Integrity – Building trust through open communication.
-          🔹 Scalability & Growth – Solutions that evolve with your business needs.
-          🔹 Collaboration & Commitment – We work as an extension of your team.
+          <ul>
+          <br>🔹 Client-Centric Approach – Your success defines our success. 
+          <br>🔹 Innovation & Excellence – We stay ahead with cutting-edge solutions.
+          <br>🔹 Transparency & Integrity – Building trust through open communication.
+          <br>🔹 Scalability & Growth – Solutions that evolve with your business needs.
+          <br>🔹 Collaboration & Commitment – We work as an extension of your team.
+          </ul>
         </p>
       </div>
 
@@ -187,11 +189,13 @@
 
       <div class="container" data-aos="fade-up">
         <p style="text-align: center;"> 
-          ✔ Industry-leading expertise in IT services
-          ✔ Personalized solutions for businesses of all sizes
-          ✔ Results-driven approach focused on business growth
-          ✔ End-to-end digital services under one roof
-          ✔ Dedicated support & long-term partnerships
+          <ul>
+          <br> ✔ Industry-leading expertise in IT services
+          <br> ✔ Personalized solutions for businesses of all sizes
+          <br> ✔ Results-driven approach focused on business growth
+          <br> ✔ End-to-end digital services under one roof
+          <br> ✔ Dedicated support & long-term partnerships
+          </ul> 
         </p>
       </div>
 
