--- a/about.html
+++ b/about.html
@@ -141,8 +141,12 @@
         <p>Our Core Values</p>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;">
+      <div class="container" data-aos="fade-up" style="
+    list-style: none;
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    align-content: center;">
           <ul>
           <br>🔹 Client-Centric Approach – Your success defines our success. 
           <br>🔹 Innovation & Excellence – We stay ahead with cutting-edge solutions.
@@ -187,8 +191,12 @@
         <p>Why Businesses Trust BizzNist</p>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up">
-        <p style="text-align: center;"> 
+      <div class="container" data-aos="fade-up" style="
+    list-style: none;
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    align-content: center;">>
           <ul>
           <br> ✔ Industry-leading expertise in IT services
           <br> ✔ Personalized solutions for businesses of all sizes
@@ -318,3 +326,11 @@
 </body>
 
 </html>
+
+
+<style>
+  .container.aos-init.aos-animate {
+    margin-top: -50px;
+    text-align: center;
+  }
+  </style>
