--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
     <!-- Page Title -->
     <div class="page-title">
       <div class="heading">
-        <div class="container">
+        <!--<div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>About BizzNist</h1>
@@ -326,11 +326,3 @@
 </body>
 
 </html>
-
-
-<style>
-  .container.aos-init.aos-animate {
-    margin-top: -50px;
-    text-align: center;
-  }
-  </style>
