--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <nav class="breadcrumbs">
         <div class="container">
           <ol>
