--- a/index.html
+++ b/index.html
@@ -711,11 +711,8 @@
                 <p>
                   Professional and reliable service. Highly recommended!
                 </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                   <h3>Own Properties</h3>
                   <h4>CEO &amp; Founder</h4>
-                </div>
               </div>
             </div><!-- End testimonial item -->
 
@@ -727,11 +724,8 @@
                 <p>
                   BizzNist transformed our website and boosted our sales by 40%!
                 </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                   <h3>AloeAura</h3>
                   <h4>Founder</h4>
-                </div>
               </div>
             </div><!-- End testimonial item -->
 
@@ -741,13 +735,11 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  BizzNist has been a game-changer for OORZA! Their expertise in website development and digital strategy helped us optimize our Shopify store, improve SEO, and drive higher sales. Their seamless service and insightful guidance have truly elevated our brand’s online presence. Highly recommended!
                 </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                  <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
-                </div>
+                  <h3>The OORZA</h3>
+                  <h4>Founder</h4>
+                
               </div>
             </div><!-- End testimonial item -->
 
@@ -757,13 +749,10 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  The expert support and seamless website development services helped NCR Today establish a strong foothold in the competitive news media industry. Their efficient solutions in CMS integration and digital strategy allowed us to streamline operations and focus on delivering quality content. Highly recommended for anyone looking to scale their online presence!
                 </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                  <h3>Matt Brandon</h3>
-                  <h4>Freelancer</h4>
-                </div>
+                 <h3>NCR Today</h3>
+                  <h4>Senior Editor</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -773,13 +762,10 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  As the founder of HPBL News, I faced immense challenges migrating our data from a custom CMS to a new website. There was no one to assist with this complex transition—until I found BizzNist. Their expertise, dedication, and seamless execution made the process smooth and hassle-free. I highly recommend BizzNist to anyone in need of reliable IT solutions!
                 </p>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                  <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
-                </div>
+                  <h3>HPBL News</h3>
+                  <h4>Founder</h4>
               </div>
             </div><!-- End testimonial item -->
 
