--- a/index.html
+++ b/index.html
@@ -722,8 +722,7 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  BizzNist transformed our website and boosted our sales by 40%!
-                </p>
+                  BizzNist has been instrumental in customizing my eCommerce website and seamlessly integrating the payment gateway. Their expertise, prompt support, and attention to detail made the entire process smooth and hassle-free. I highly recommend their services to anyone looking for reliable IT solutions. Thank you, BizzNist, for your exceptional work!                </p>
                   <h3>AloeAura</h3>
                   <h4>Founder</h4>
               </div>
