--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="/" class="active">Home<br></a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="/about-us">About</a></li>
           <!--<li><a href="#team">Team</a></li> -->
           <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
