--- a/about-us/index.html
+++ b/about-us/index.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="bizznist/assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: FlexStart
@@ -43,7 +43,7 @@
 
       <a href="/" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo.png" alt="BizzNist">
+        <img src="bizznist/assets/img/logo.png" alt="BizzNist">
         <!-- <h1 class="sitename">FlexStart</h1> -->
       </a>
 
