--- a/about-us/index.html
+++ b/about-us/index.html
@@ -110,7 +110,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p>Who We Are</p>
+        <h2>Who We Are</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up">
@@ -119,7 +119,7 @@
     
     <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p>Our Mission</p>
+        <h2>Our Mission</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up">
@@ -129,7 +129,7 @@
 
     <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p>Our Vision</p>
+        <h2>Our Vision</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up">
@@ -138,7 +138,7 @@
 
     <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p>Our Core Values</p>
+        <h2>Our Core Values</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" style="
@@ -159,7 +159,7 @@
 
     <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p>What We Do</p>
+        <h2>What We Do</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up">
@@ -168,7 +168,7 @@
 
 <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p>Meet Our Experts</p>
+        <h2>Meet Our Experts</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up">
@@ -178,7 +178,7 @@
       
 <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p>Our Journey</p>
+        <h2>Our Journey</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up">
@@ -188,7 +188,7 @@
 
 <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p>Why Businesses Trust BizzNist</p>
+        <h2>Why Businesses Trust BizzNist</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" style="
@@ -209,7 +209,7 @@
 
 <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p>Let's Grow Together!</p>
+        <h2>Let's Grow Together!</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up">
