--- a/service-details.html
+++ b/service-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About Us | BizzNist | IT Solutions, Website Development & Digital Services</title>
+  <title>Our Services | BizzNist | Expert IT Solutions, Website Development & Digital Services</title>
   <meta name="description" content="Discover BizzNist, a leading IT solutions provider specializing in website development, app development, SEO, digital marketing, and more. Learn about our mission, vision, values, and expertise.">
   <meta name="keywords" content="IT solutions, website development, app development, SEO services, digital marketing, business IT consulting, BizzNist, professional IT services, technology solutions, IT support, eCommerce development, WordPress development, Shopify experts, Wix developers, business website solutions">
 
@@ -90,8 +90,8 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Service Details</h1>
-              <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <h1>Our Services: Driving Digital Success with Innovation</h1>
+              <p class="mb-0">At BizzNist, we empower businesses with cutting-edge IT solutions tailored to meet diverse industry needs. Whether you're a startup, small business, or enterprise, our team delivers expert solutions in website development, app development, SEO, and digital marketing to help you grow online.</p>
             </div>
           </div>
         </div>
@@ -116,17 +116,18 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
 
             <div class="service-box">
-              <h4>Serices List</h4>
+              <h4>Service List</h4>
               <div class="services-list">
-                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Product Management</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Graphic Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Marketing</span></a>
+                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Website Development</span></a>
+                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Advertisement Management</span></a>
+                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>SEO & Digital Marketing</span></a>
+                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Domain & Hosting Solutions</span></a>
+                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Corporate Training & Technical Documentation</span></a>
+                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Data Migration & IT Consulting</span></a>
               </div>
             </div><!-- End Services List -->
 
-            <div class="service-box">
+          <!--  <div class="service-box">
               <h4>Download Catalog</h4>
               <div class="download-catalog">
                 <a href="#"><i class="bi bi-filetype-pdf"></i><span>Catalog PDF</span></a>
@@ -137,8 +138,8 @@
             <div class="help-box d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-headset help-icon"></i>
               <h4>Have a Question?</h4>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>+1 5589 55488 55</span></p>
-              <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contact@example.com">contact@example.com</a></p>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>+91 9210481163</span></p>
+              <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contact@bizznist.com">contact@bizznist.com</a></p>
             </div>
 
           </div>
