--- a/service-details.html
+++ b/service-details.html
@@ -90,7 +90,8 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Our Services: Driving Digital Success with Innovation</h1>
+              <h1>Our Services</h1>
+              <h2>Driving Digital Success with Innovation</h2>
               <p class="mb-0">At BizzNist, we empower businesses with cutting-edge IT solutions tailored to meet diverse industry needs. Whether you're a startup, small business, or enterprise, our team delivers expert solutions in website development, app development, SEO, and digital marketing to help you grow online.</p>
             </div>
           </div>
@@ -138,7 +139,7 @@
             <div class="help-box d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-headset help-icon"></i>
               <h4>Have a Question?</h4>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>+91 9210481163</span></p>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span> <a href="tel:+91 9210481163">+91 9210481163</span></a></p>
               <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contact@bizznist.com">contact@bizznist.com</a></p>
             </div>
 
