--- a/services/index.html
+++ b/services/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Our Services | BizzNist | Expert IT Solutions, Website Development & Digital Services</title>
+  <title>About Us | BizzNist | IT Solutions, Website Development & Digital Services</title>
   <meta name="description" content="Discover BizzNist, a leading IT solutions provider specializing in website development, app development, SEO, digital marketing, and more. Learn about our mission, vision, values, and expertise.">
   <meta name="keywords" content="IT solutions, website development, app development, SEO services, digital marketing, business IT consulting, BizzNist, professional IT services, technology solutions, IT support, eCommerce development, WordPress development, Shopify experts, Wix developers, business website solutions">
 
