--- a/services/index.html
+++ b/services/index.html
@@ -90,8 +90,8 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Our Services</h1>
-              <h2>Driving Digital Success with Innovation</h2>
+              <h2>Services</h2>
+              <h1>Driving Digital Success with Innovation</h1>
               <p class="mb-0">At BizzNist, we empower businesses with cutting-edge IT solutions tailored to meet diverse industry needs. Whether you're a startup, small business, or enterprise, our team delivers expert solutions in website development, app development, SEO, and digital marketing to help you grow online.</p>
             </div>
           </div>
