--- a/about-us/index.html
+++ b/about-us/index.html
@@ -321,7 +321,7 @@
   <script src="/bizznist/assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="/bizznist/assets/js/main.js"></script>
 
 </body>
 
