--- a/about-us/index.html
+++ b/about-us/index.html
@@ -196,7 +196,7 @@
     display: flex;
     flex-direction: column-reverse;
     flex-wrap: wrap;
-    align-content: center;">>
+    align-content: center;">
           <ul>
           <br> ✔ Industry-leading expertise in IT services
           <br> ✔ Personalized solutions for businesses of all sizes
