--- a/services/index.html
+++ b/services/index.html
@@ -90,7 +90,7 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h2>Services</h2>
+              <h4>Services</h4>
               <h1>Driving Digital Success with Innovation</h1>
               <p class="mb-0">At BizzNist, we empower businesses with cutting-edge IT solutions tailored to meet diverse industry needs. Whether you're a startup, small business, or enterprise, our team delivers expert solutions in website development, app development, SEO, and digital marketing to help you grow online.</p>
             </div>
@@ -119,12 +119,12 @@
             <div class="service-box">
               <h4>Service List</h4>
               <div class="services-list">
-                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Website Development</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Advertisement Management</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>SEO & Digital Marketing</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Domain & Hosting Solutions</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Corporate Training & Technical Documentation</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Data Migration & IT Consulting</span></a>
+                <a href="/services/website-development" class="active"><i class="bi bi-arrow-right-circle"></i><span>Website Development</span></a>
+                <a href="/services/advertisement-management"><i class="bi bi-arrow-right-circle"></i><span>Advertisement Management</span></a>
+                <a href="/services/seo-and-digital-marketing"><i class="bi bi-arrow-right-circle"></i><span>SEO & Digital Marketing</span></a>
+                <a href="/services/domain-and-hosting-solutions"><i class="bi bi-arrow-right-circle"></i><span>Domain & Hosting Solutions</span></a>
+                <a href="/services/corporate-training-and-technical-documentation"><i class="bi bi-arrow-right-circle"></i><span>Corporate Training & Technical Documentation</span></a>
+                <a href="/services/data-migration-and-it-consulting"><i class="bi bi-arrow-right-circle"></i><span>Data Migration & IT Consulting</span></a>
               </div>
             </div><!-- End Services List -->
 
