--- a/services/website-development/index.html
+++ b/services/website-development/index.html
@@ -54,14 +54,14 @@
           <!--<li><a href="#team">Team</a></li> -->
           <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li class="dropdown"><a href="/services/website-development"><span>Website Development</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
+              <li class="dropdown"><a href="/services/website-development"><span>Website Development</span></i></a>
+                <!--<ul>
                   <li><a href="#">Deep Dropdown 1</a></li>
                   <li><a href="#">Deep Dropdown 2</a></li>
                   <li><a href="#">Deep Dropdown 3</a></li>
                   <li><a href="#">Deep Dropdown 4</a></li>
                   <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
+                </ul> -->
               </li>
               <li><a href="/services/advertisement-management">Advertisement Management</a></li>
               <li><a href="/services/seo-and-digital-marketing">SEO & Digital Marketing</a></li>
