--- a/services/website-development/index.html
+++ b/services/website-development/index.html
@@ -101,7 +101,7 @@
           <ol>
             <li><a href="/">Home</a></li>
             <li class="/services">Services</li>
-            <li class="current">Services</li>
+            <li class="current">Website Development Services</li>
           </ol>
         </div>
       </nav>
