--- a/services/website-development/index.html
+++ b/services/website-development/index.html
@@ -61,14 +61,14 @@
                   <li><a href="#">Deep Dropdown 3</a></li>
                   <li><a href="#">Deep Dropdown 4</a></li>
                   <li><a href="#">Deep Dropdown 5</a></li>
-                </ul> -->
+                </ul> 
               </li>
               <li><a href="/services/advertisement-management">Advertisement Management</a></li>
               <li><a href="/services/seo-and-digital-marketing">SEO & Digital Marketing</a></li>
               <li><a href="/services/domain-and-hosting-solutions">Domain & Hosting Solutions</a></li>
               <li><a href="/services/corporate-training-and-technical-documentation">Corporate Training & Technical Documentation</a></li>
               <li><a href="/services/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
-            </ul>
+            </ul> -->
           </li>
           <li><a href="https://gyaansaar.bizznist.com/knowledge-base">Resource Center</a></li>
           <li><a href="#pricing">Pricing</a></li>
@@ -120,11 +120,12 @@
               <h4>Service List</h4>
               <div class="services-list">
                 <a href="/services/website-development" class="active"><i class="bi bi-arrow-right-circle"></i><span>Website Development</span></a>
-                <a href="/services/advertisement-management"><i class="bi bi-arrow-right-circle"></i><span>Advertisement Management</span></a>
+<!--                <a href="/services/advertisement-management"><i class="bi bi-arrow-right-circle"></i><span>Advertisement Management</span></a>
                 <a href="/services/seo-and-digital-marketing"><i class="bi bi-arrow-right-circle"></i><span>SEO & Digital Marketing</span></a>
                 <a href="/services/domain-and-hosting-solutions"><i class="bi bi-arrow-right-circle"></i><span>Domain & Hosting Solutions</span></a>
                 <a href="/services/corporate-training-and-technical-documentation"><i class="bi bi-arrow-right-circle"></i><span>Corporate Training & Technical Documentation</span></a>
                 <a href="/services/data-migration-and-it-consulting"><i class="bi bi-arrow-right-circle"></i><span>Data Migration & IT Consulting</span></a>
+-->    
               </div>
             </div><!-- End Services List -->
 
