--- a/services/website-development/index.html
+++ b/services/website-development/index.html
@@ -54,8 +54,8 @@
           <!--<li><a href="#team">Team</a></li> -->
           <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li class="dropdown"><a href="/services/website-development"><span>Website Development</span></i></a>
-                <!--<ul>
+              <li class="dropdown"><a href="/services/website-development"><span>Website Development</span></i></a> </li>
+<!--                <ul>
                   <li><a href="#">Deep Dropdown 1</a></li>
                   <li><a href="#">Deep Dropdown 2</a></li>
                   <li><a href="#">Deep Dropdown 3</a></li>
@@ -70,6 +70,7 @@
               <li><a href="/services/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
             </ul> 
           </li>-->
+               
           <li><a href="https://gyaansaar.bizznist.com/knowledge-base">Resource Center</a></li>
           <li><a href="#pricing">Pricing</a></li>
           </li>
