--- a/services/website-development/index.html
+++ b/services/website-development/index.html
@@ -52,7 +52,7 @@
           <li><a href="/" class="active">Home<br></a></li>
           <li><a href="/about-us">About</a></li>
           <!--<li><a href="#team">Team</a></li> -->
-          <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="/services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li class="dropdown"><a href="/services/website-development"><span>Website Development</span></i></a> </li>
 <!--            <ul>
