--- a/services/advertisement-management/index.html
+++ b/services/advertisement-management/index.html
@@ -55,13 +55,13 @@
           <li class="dropdown"><a href="/services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li class="dropdown"><a href="/services/website-development" ><span>Website Development</span></i></a> </li>
-              <li><a href="/services/advertisement-management"class="active">Advertisement Management</a></li>
+              <li class="dropdown"><a href="/services/advertisement-management">Advertisement Management</a></li>
 <!--            
               
-              <li><a href="/services/seo-and-digital-marketing">SEO & Digital Marketing</a></li>
-              <li><a href="/services/domain-and-hosting-solutions">Domain & Hosting Solutions</a></li>
-              <li><a href="/services/corporate-training-and-technical-documentation">Corporate Training & Technical Documentation</a></li>
-              <li><a href="/services/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
+              <li class="dropdown"><a href="/services/seo-and-digital-marketing">SEO & Digital Marketing</a></li>
+              <li class="dropdown"><a href="/services/domain-and-hosting-solutions">Domain & Hosting Solutions</a></li>
+              <li class="dropdown"><a href="/services/corporate-training-and-technical-documentation">Corporate Training & Technical Documentation</a></li>
+              <li class="dropdown"><a href="/services/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
 -->              
             </ul> 
           </li>
@@ -87,7 +87,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Services</h1>
-              <h3>Website Development Services</h3>
+              <h3>Advertisement Management</h3>
             </div>
           </div>
         </div>
@@ -97,7 +97,7 @@
           <ol>
             <li><a href="/">Home</a></li>
             <li class="/services">Services</li>
-            <li class="current">Website Development Services</li>
+            <li class="current">Advertisement Management</li>
           </ol>
         </div>
       </nav>
@@ -115,9 +115,9 @@
             <div class="service-box">
               <h4>Service List</h4>
               <div class="services-list">
-                <a href="/services/website-development" class="active"><i class="bi bi-arrow-right-circle"></i><span>Website Development</span></a>
-<!--                <a href="/services/advertisement-management"><i class="bi bi-arrow-right-circle"></i><span>Advertisement Management</span></a>
-                <a href="/services/seo-and-digital-marketing"><i class="bi bi-arrow-right-circle"></i><span>SEO & Digital Marketing</span></a>
+                <a href="/services/website-development"><i class="bi bi-arrow-right-circle"></i><span>Website Development</span></a>
+                <a href="/services/advertisement-management" class="active"><i class="bi bi-arrow-right-circle"></i><span>Advertisement Management</span></a>
+<!--                            <a href="/services/seo-and-digital-marketing"><i class="bi bi-arrow-right-circle"></i><span>SEO & Digital Marketing</span></a>
                 <a href="/services/domain-and-hosting-solutions"><i class="bi bi-arrow-right-circle"></i><span>Domain & Hosting Solutions</span></a>
                 <a href="/services/corporate-training-and-technical-documentation"><i class="bi bi-arrow-right-circle"></i><span>Corporate Training & Technical Documentation</span></a>
                 <a href="/services/data-migration-and-it-consulting"><i class="bi bi-arrow-right-circle"></i><span>Data Migration & IT Consulting</span></a>
