--- a/services/advertisement-management/index.html
+++ b/services/advertisement-management/index.html
@@ -205,7 +205,13 @@
 <br>             
 
             <h2>Why Choose BizzNist for Advertisement Management?</h2>
-            
+            <ul>
+              <li><i class="bi bi-check-circle"></i> <span>Expert Ad Specialists – Certified professionals managing high-budget campaigns.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Data-Driven Strategy – We analyze insights to optimize performance.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>AI-Powered Ad Optimization – Get the most from your ad spend.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>End-to-End Campaign Management – From ad creation to reporting, we handle everything.</span></li>
+            </ul> 
+              <p>Let’s Scale Your Business with Powerful Ad Campaigns!</p>
           </div>
 
         </div>
