--- a/about-us/index.html
+++ b/about-us/index.html
@@ -55,12 +55,13 @@
           <li class="dropdown"><a href="/services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li class="dropdown"><a href="/services/website-development"><span>Website Development</span></a></li>
+              <li class="dropdown"><a href="/services/advertisement-management">Advertisement Management</a></li>
+
 <!--          
-              <li><a href="/services/advertisement-management">Advertisement Management</a></li>
-              <li><a href="/services/seo-and-digital-marketing">SEO & Digital Marketing</a></li>
-              <li><a href="/services/domain-and-hosting-solutions">Domain & Hosting Solutions</a></li>
-              <li><a href="/services/corporate-training-and-technical-documentation">Corporate Training & Technical Documentation</a></li>
-              <li><a href="/services/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
+              <li class="dropdown"><a href="/services/seo-and-digital-marketing">SEO & Digital Marketing</a></li>
+              <li class="dropdown"><a href="/services/domain-and-hosting-solutions">Domain & Hosting Solutions</a></li>
+              <li class="dropdown"><a href="/services/corporate-training-and-technical-documentation">Corporate Training & Technical Documentation</a></li>
+              <li class="dropdown"><a href="/services/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
 -->                      
             </ul>
           </li>
