--- a/services/index.html
+++ b/services/index.html
@@ -114,8 +114,8 @@
               <h4>Service List</h4>
               <div class="services-list">
                 <a href="/services/website-development"><i class="bi bi-arrow-right-circle"></i><span>Website Development</span></a>
-<!--                <a href="/services/advertisement-management"><i class="bi bi-arrow-right-circle"></i><span>Advertisement Management</span></a>
-                <a href="/services/seo-and-digital-marketing"><i class="bi bi-arrow-right-circle"></i><span>SEO & Digital Marketing</span></a>
+                <a href="/services/advertisement-management"><i class="bi bi-arrow-right-circle"></i><span>Advertisement Management</span></a>
+<!--                <a href="/services/seo-and-digital-marketing"><i class="bi bi-arrow-right-circle"></i><span>SEO & Digital Marketing</span></a>
                 <a href="/services/domain-and-hosting-solutions"><i class="bi bi-arrow-right-circle"></i><span>Domain & Hosting Solutions</span></a>
                 <a href="/services/corporate-training-and-technical-documentation"><i class="bi bi-arrow-right-circle"></i><span>Corporate Training & Technical Documentation</span></a>
                 <a href="/services/data-migration-and-it-consulting"><i class="bi bi-arrow-right-circle"></i><span>Data Migration & IT Consulting</span></a>
