--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
   <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
     <a href="/" class="logo d-flex align-items-center me-auto">
-      <img src="assets/img/logo.png" alt="BizzNist">
+      <img src="/assets/img/logo.png" alt="BizzNist">
     </a>
 
     <nav id="navmenu" class="navmenu">
