--- a/tracking.html
+++ b/tracking.html
@@ -7,3 +7,6 @@
 
   gtag('config', 'G-JKFMSBS4V7');
 </script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4420458811496786"
+     crossorigin="anonymous"></script>
