--- a/index.html
+++ b/index.html
@@ -915,8 +915,8 @@
                 <div class="info-item" data-aos="fade" data-aos-delay="200">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Address</h3>
-                  <p>Ghaziabad </p>
-                  <p>Uttar Pradesh, India, 201002</p>
+                  <p>Mundka, Delhi</p>
+                  <p>India, 110081</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -924,7 +924,7 @@
                 <div class="info-item" data-aos="fade" data-aos-delay="300">
                   <i class="bi bi-telephone"></i>
                   <h3>Call for quick inquiries</h3>
-                  <p>+91 9210481163</p>
+                  <p><a href="tel:+919210481163">+91 9210481163</a></p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -932,7 +932,7 @@
                 <div class="info-item" data-aos="fade" data-aos-delay="400">
                   <i class="bi bi-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>contact@bizznist.com</p>
+                  <p><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></p>
                 </div>
               </div><!-- End Info Item -->
 
