--- a/footer.html
+++ b/footer.html
@@ -45,7 +45,7 @@
   </div>
 
   <div class="container copyright text-center mt-4">
-    <p>©2025 <strong class="px-1 sitename">BizzNist</strong> All Rights Reserved</p>
+    <p>©2025<strong class="px-1 sitename"><a href="https://www.bizznist.com"> BizzNist</a></strong>All Rights Reserved</p>
     <div class="credits">
       Designed by <a href="/">BizzNist</a>
     </div>
