--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -50,81 +50,103 @@
     <section id="privacy-policy" class="starter-section section">
 
       <div class="container section-title" data-aos="fade-up">
-        <h2>Privacy Policy</h2>
-        <p><strong>Effective Date:</strong> August 26, 2025<br>
-        <strong>Last Updated:</strong> August 26, 2025</p>
+        <h2 style="text-align: center;">Privacy Policy</h2>
+        <p style="text-align: center;">
+          <strong>Effective Date:</strong> August 26, 2025<br>
+          <strong>Last Updated:</strong> August 26, 2025
+        </p>
       </div>
 
       <div class="container" data-aos="fade-up">
-        <p>At <strong>BizzNist</strong>, we respect your privacy and are committed to protecting the personal information you share with us. This Privacy Policy explains how we collect, use, and safeguard your information when you visit our website (<a href="https://www.bizznist.com/">https://www.bizznist.com</a>) or use our services.</p>
+        <p style="text-align: center;">
+          At <strong>BizzNist</strong>, we respect your privacy and are committed to protecting the personal information you share with us. This Privacy Policy explains how we collect, use, and safeguard your information when you visit our website (<a href="https://www.bizznist.com/">https://www.bizznist.com</a>) or use our services.
+        </p>
       </div>
 
       <!-- Sections -->
-      <div class="container section-title" data-aos="fade-up"><h2>1. Information We Collect</h2></div>
+      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">1. Information We Collect</h2></div>
       <div class="container" data-aos="fade-up">
-        <ul>
-          <li><strong>Personal Information</strong>: Name, email, phone number, company name, or details you provide via forms.</li>
-          <li><strong>Non-Personal Information</strong>: Browser type, device type, IP address, location data, and usage patterns.</li>
-          <li><strong>Cookies & Tracking Data</strong>: Used to improve your browsing experience and analyze site traffic.</li>
-        </ul>
+        <p style="text-align: center;">
+          🔹 <strong>Personal Information</strong>: Name, email, phone number, company name, or details you provide via forms.<br>
+          🔹 <strong>Non-Personal Information</strong>: Browser type, device type, IP address, location data, and usage patterns.<br>
+          🔹 <strong>Cookies & Tracking Data</strong>: Used to improve your browsing experience and analyze site traffic.
+        </p>
       </div>
 
-      <div class="container section-title" data-aos="fade-up"><h2>2. How We Use Your Information</h2></div>
+      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">2. How We Use Your Information</h2></div>
       <div class="container" data-aos="fade-up">
-        <ul>
-          <li>To operate and maintain our website and services.</li>
-          <li>To respond to inquiries and provide customer support.</li>
-          <li>To send newsletters or promotional content (optional).</li>
-          <li>To analyze usage and improve user experience.</li>
-          <li>To comply with legal obligations and prevent fraud.</li>
-        </ul>
+        <p style="text-align: center;">
+          🔹 To operate and maintain our website and services.<br>
+          🔹 To respond to inquiries and provide customer support.<br>
+          🔹 To send newsletters or promotional content (optional).<br>
+          🔹 To analyze usage and improve user experience.<br>
+          🔹 To comply with legal obligations and prevent fraud.
+        </p>
       </div>
 
-      <div class="container section-title" data-aos="fade-up"><h2>3. Sharing of Information</h2></div>
+      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">3. Sharing of Information</h2></div>
       <div class="container" data-aos="fade-up">
-        <p>We do not sell your personal information. We may share it with trusted service providers, legal authorities if required, or during business transfers such as mergers or acquisitions.</p>
+        <p style="text-align: center;">
+          We do not sell your personal information. We may share it with trusted service providers, legal authorities if required, or during business transfers such as mergers or acquisitions.
+        </p>
       </div>
 
-      <div class="container section-title" data-aos="fade-up"><h2>4. Cookies & Tracking Technologies</h2></div>
+      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">4. Cookies & Tracking Technologies</h2></div>
       <div class="container" data-aos="fade-up">
-        <p>Cookies help us remember your preferences, analyze visitor behavior, and deliver a better browsing experience. You may disable cookies in your browser, but some site features may not work properly.</p>
+        <p style="text-align: center;">
+          Cookies help us remember your preferences, analyze visitor behavior, and deliver a better browsing experience. You may disable cookies in your browser, but some site features may not work properly.
+        </p>
       </div>
 
-      <div class="container section-title" data-aos="fade-up"><h2>5. Data Security</h2></div>
+      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">5. Data Security</h2></div>
       <div class="container" data-aos="fade-up">
-        <p>We use industry-standard security measures to protect your information. However, no internet transmission is completely secure.</p>
+        <p style="text-align: center;">
+          We use industry-standard security measures to protect your information. However, no internet transmission is completely secure.
+        </p>
       </div>
 
-      <div class="container section-title" data-aos="fade-up"><h2>6. Your Rights</h2></div>
+      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">6. Your Rights</h2></div>
       <div class="container" data-aos="fade-up">
-        <p>You may have rights to access, update, or delete your personal data, opt-out of marketing, restrict processing, or request data portability. To exercise your rights, email us at <strong>contact@bizznist.com</strong>.</p>
+        <p style="text-align: center;">
+          You may have rights to access, update, or delete your personal data, opt-out of marketing, restrict processing, or request data portability. To exercise your rights, email us at <strong>contact@bizznist.com</strong>.
+        </p>
       </div>
 
-      <div class="container section-title" data-aos="fade-up"><h2>7. GDPR & CCPA Compliance</h2></div>
+      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">7. GDPR & CCPA Compliance</h2></div>
       <div class="container" data-aos="fade-up">
-        <p>If you are located in the EU or California, you have additional rights such as knowing what personal data we collect, requesting deletion, or opting out of data sales (we do not sell personal data).</p>
+        <p style="text-align: center;">
+          If you are located in the EU or California, you have additional rights such as knowing what personal data we collect, requesting deletion, or opting out of data sales (we do not sell personal data).
+        </p>
       </div>
 
-      <div class="container section-title" data-aos="fade-up"><h2>8. Third-Party Links</h2></div>
+      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">8. Third-Party Links</h2></div>
       <div class="container" data-aos="fade-up">
-        <p>Our website may include links to external sites. We are not responsible for their privacy practices and encourage reviewing their policies.</p>
+        <p style="text-align: center;">
+          Our website may include links to external sites. We are not responsible for their privacy practices and encourage reviewing their policies.
+        </p>
       </div>
 
-      <div class="container section-title" data-aos="fade-up"><h2>9. Children’s Privacy</h2></div>
+      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">9. Children’s Privacy</h2></div>
       <div class="container" data-aos="fade-up">
-        <p>We do not knowingly collect personal data from individuals under the age of 13 (or the minimum legal age in your country).</p>
+        <p style="text-align: center;">
+          We do not knowingly collect personal data from individuals under the age of 13 (or the minimum legal age in your country).
+        </p>
       </div>
 
-      <div class="container section-title" data-aos="fade-up"><h2>10. Changes to This Policy</h2></div>
+      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">10. Changes to This Policy</h2></div>
       <div class="container" data-aos="fade-up">
-        <p>We may update this Privacy Policy. Any changes will be posted here with an updated "Last Updated" date.</p>
+        <p style="text-align: center;">
+          We may update this Privacy Policy. Any changes will be posted here with an updated "Last Updated" date.
+        </p>
       </div>
 
-      <div class="container section-title" data-aos="fade-up"><h2>11. Contact Us</h2></div>
+      <div class="container section-title" data-aos="fade-up"><h2 style="text-align: center;">11. Contact Us</h2></div>
       <div class="container" data-aos="fade-up">
-        <p>If you have any questions, please contact us:<br>
-        📧 <strong>Email:</strong> contact@bizznist.com<br>
-        🌐 <strong>Website:</strong> <a href="https://www.bizznist.com/">www.bizznist.com</a></p>
+        <p style="text-align: center;">
+          If you have any questions, please contact us:<br>
+          📧 <strong>Email:</strong> contact@bizznist.com<br>
+          🌐 <strong>Website:</strong> <a href="https://www.bizznist.com/">www.bizznist.com</a>
+        </p>
       </div>
 
     </section><!-- /Privacy Policy Section -->
