--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -52,8 +52,8 @@
       <div class="container section-title" data-aos="fade-up">
         <h2 style="text-align: center;">Privacy Policy</h2>
         <p style="text-align: center;">
-          <strong>Effective Date:</strong> August 26, 2025<br>
-          <strong>Last Updated:</strong> August 26, 2025
+          Effective Date: August 26, 2025<br>
+          Last Updated:August 26, 2025
         </p>
       </div>
 
