--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <body class="index-page">
 
-    <header></header>
+    <div data-include="/_includes/header.html"></div>
 
   <main class="main">
 
@@ -895,7 +895,7 @@
 
   </main>
 
-    <footer></footer>
+    <div data-include="/_includes/footer.html"></div>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
